--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,166 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* --- Custom Fonts: Sohne & Ivar Headline --- */
+@font-face {
+  font-family: 'Ivar Headline';
+  src: url('./assets/fonts/IvarHeadline-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Ivar Headline';
+  src: url('./assets/fonts/IvarHeadline-Italic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Ivar Headline';
+  src: url('./assets/fonts/IvarHeadline-Medium.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-buch.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-buch-kursiv.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-dreiviertelfett.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-dreiviertelfett-kursiv.woff2') format('woff2');
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-extrafett.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-extrafett-kursiv.woff2') format('woff2');
+  font-weight: 800;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-extraleicht.woff2') format('woff2');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-extraleicht-kursiv.woff2') format('woff2');
+  font-weight: 200;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-fett.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-fett-kursiv.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-halbfett.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-halbfett-kursiv.woff2') format('woff2');
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-kraftig.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-kraftig-kursiv.woff2') format('woff2');
+  font-weight: 900;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-leicht.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne';
+  src: url('./assets/fonts/soehne-web-leicht-kursiv.woff2') format('woff2');
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Sohne Mono';
+  src: url('./assets/fonts/SohneMono-Buch.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Sun/Moon node title and subtitle font classes */
+.sunmoon-title {
+  font-family: 'Ivar Headline', serif;
+  font-weight: 400;
+  font-size: 3.2em;
+  line-height: 1.12;
+  margin-bottom: 0.5em;
+  text-align: center;
+}
+.sunmoon-subtitle {
+  font-family: 'Sohne', sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+  line-height: 1.6;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
